Fix spelling of getAttribute.

--- a/docs/modules/ROOT/pages/servlet/oauth2/resource-server/multitenancy.adoc
+++ b/docs/modules/ROOT/pages/servlet/oauth2/resource-server/multitenancy.adoc
@@ -249,7 +249,7 @@ public class TenantJWSKeySelector
 
 	private JWSKeySelector<SecurityContext> fromTenant(String tenant) {
 		return Optional.ofNullable(this.tenants.findById(tenant)) <3>
-		        .map(t -> t.getAttrbute("jwks_uri"))
+		        .map(t -> t.getAttribute("jwks_uri"))
 				.map(this::fromUri)
 				.orElseThrow(() -> new IllegalArgumentException("unknown tenant"));
 	}
@@ -287,7 +287,7 @@ class TenantJWSKeySelector(tenants: TenantRepository) : JWTClaimsSetAwareJWSKeyS
 
     private fun fromTenant(tenant: String): JWSKeySelector<SecurityContext> {
         return Optional.ofNullable(this.tenants.findById(tenant)) <3>
-                .map { t -> t.getAttrbute("jwks_uri") }
+                .map { t -> t.getAttribute("jwks_uri") }
                 .map { uri: String -> fromUri(uri) }
                 .orElseThrow { IllegalArgumentException("unknown tenant") }
     }
